# zlomekfs

./: .gitignore  ABOUT  CMakeLists.txt  CREDITS  Doxyfile  Doxyfile.in  INSTALL  INSTALL.android  INSTALL.cygwin  INSTALL.macosx  Makefile  Makefile.am  Makefile.cvs  README  README.md  TODO  chardev.c  config.h.cmake  configure.in  dependencies  file.c  inode.c  makeall.sh  makeall_android.sh  super.c  zfs.e3p  zfs.h  zfsd-bconfig.h.cmake  zfsd_call.c  zfsd_call.h  zlomekfs.spec
regression-testing/syplog/: Makefile.am  make-rpm.sh
regression-testing/syplog/py/: setup.py
regression-testing/syplog/src/: CMakeLists.txt  Makefile.am  facility.h  log-constants.h  log-level.h  log-struct.h  settings-loader.c  syp-error.c  syp-error.h  syplog.c  syplog.h  test.py
regression-testing/syplog/tests/: dump-logs.c  fakelog.c  infinite-log.c
regression-testing/zen-unit/: AUTHORS  configure.in  make-rpm.sh  zen-unit.spec
regression-testing/zen-unit/src/: zen-elf-search.c  zen-library-run.c  zen-library-run.h  zen-search.h  zen-shared-search.h  zen-static-search.c  zen-static-search.h
syplog/: Doxyfile  Makefile  Makefile.am  TODO  configure.in  make-rpm.sh  syplog-0.3.spec  syplog.spec
syplog/doc/: Doxyfile
syplog/py/: Makefile  generate_swig_def.sh  pysyplog.spec  setup.py  test.py
syplog/src/: CMakeLists.txt  Makefile  Makefile.am  facility.h  log-constants.h  log-level.h  log-struct.h  profile_default.py  settings-loader.c  settings-loader.h  syp-error.c  syp-error.h  syplog.c  syplog.h
syplog/src/control/: control-protocol.h  listener.c  listener.h
syplog/src/formatters/: CMakeLists.txt  formatter-api.h  formatter.c  formatter.h  raw-formatter.c  raw-formatter.h  user-readable-formatter.c  user-readable-formatter.h
syplog/src/media/: file-medium.c  file-medium.h  logcat-medium.c  logcat-medium.h  medium-api.c  medium-api.h  medium.c  medium.h  print-medium.c  shm-medium.c  shm-medium.h
syplog/tests/: Makefile  Makefile.am  dump-logs.c  fakelog.c  infinite-log.c  log-control.c
zen-unit/: Doxyfile  Makefile  Makefile.am  Makefile.cvs  configure.in  zen-unit-0.1.spec  zen-unit.spec
zen-unit/include/: Makefile.am  zen-unit.h
zen-unit/src/: Makefile  Makefile.am  zen-defs.h  zen-elf-search.c  zen-elf-search.h  zen-error.h  zen-library-run.c  zen-library-run.h  zen-run.c  zen-search.c  zen-search.h  zen-shared-search.c  zen-shared-search.h  zen-static-search.c  zen-static-search.h
zen-unit/tests/: Makefile  Makefile.am  zen-unit-binary.c  zen-unit-pass.c  zen-unit-so.c
zfsd/: .cvsignore  .gdbinit  CMakeLists.txt  Doxyfile  Makefile  Makefile.am  alloc-pool.c  alloc-pool.h  cap.c  cap.h  config.c  config.h  configuration.c  configuration.h  constant.c  constant.h  crc32.c  crc32.h  data-coding.c  data-coding.h  dbus-provider.c  dbus-zfsd-service.c  dependencies.pl  dir.c  dir.h  dump_intervals.c  dump_metadata.c  fh.c  fh.h  fibheap.c  fibheap.h  file.c  file.h  hardlink-list.c  hardlink-list.h  hashfile.c  hashfile.h  hashtab.c  hashtab.h  interval.c  (+55 more)
zfsd/configuration/: CMakeLists.txt  cluster_config.c  cluster_config.h  config_defaults.c  config_defaults.h  config_group.c  config_group.h  config_group_mapping.c  config_group_mapping.h  config_limits.h  config_parser.c  config_parser.h  config_user.c  config_user.h  config_user_group.c  config_user_group.h  config_user_mapping.c  config_user_mapping.h  config_volume.c  config_volume.h  configuration.c  configuration.h  local_config.c  local_config.h  private_key.c  read_config.c  read_config.h  reread_config.c  reread_config.h  shared_config.c  shared_config.h  zfs_config.c  zfs_config.h  zfsio.c  zfsio.h
zfsd/configuration/config_reader/: CMakeLists.txt  config_common.c  config_common.h  config_reader_test.cpp  local_config.c  local_config.h  shared_config.c  shared_config.h
zfsd/configuration/gen_sample_cfg/: CMakeLists.txt  gen_sample_cfg.c
zfsd/configuration/iface/: config_iface.h
zfsd/configuration/zfs_config/: CMakeLists.txt  zfs_config.c  zfs_config.h
zfsd/control/: CMakeLists.txt  control.c  control.h  controlTest.c  control_test.c  syplog_wrapper.c  syplog_wrapper.h
zfsd/control/cli/: CMakeLists.txt
zfsd/control/dbus/: CMakeLists.txt  dbus-init.c  dbus-init.h  dbus-provider.c  dbus-provider.h  dbus-provider_test.cpp  dbus-service-descriptors.h  dbus-zfsd-service.c  dbus-zfsd-service.h
zfsd/dox/: buildsystem.h  coding.h  design.h  implementation.h  mainpage.h
zfsd/fs-entities/: CMakeLists.txt
zfsd/fs-entities/cap/: CMakeLists.txt  cap.c  cap.h
zfsd/fs-entities/dir/: CMakeLists.txt  dir.c  dir.h
zfsd/fs-entities/file/: .CMakeLists.txt.swp  CMakeLists.txt  file.c  file.h
zfsd/fs-entities/handle/: CMakeLists.txt  fh.c  fh.h
zfsd/fs-iface/: CMakeLists.txt
zfsd/include/: mainpage.h  system.h
zfsd/lib/: CMakeLists.txt
zfsd/network/: network.c  network.h
zfsd/tools/: CMakeLists.txt  dump-intervals.c  dump-metadata.c
zfsd/update/: CMakeLists.txt  update.c  update.h
zfsd/user-group/: CMakeLists.txt  user-group.c  user-group.h
zfsd/version/: CMakeLists.txt  version.c  version.h
zfsd/zfs-protocol/: CMakeLists.txt  data-coding.c  data-coding.h  zfs-prot.c  zfs-prot.def  zfs-prot.h
zfsd/zfsd/: CMakeLists.txt  zfsd.c  zfsd.h  zfsd_args.h  zfsd_args_fuse.c  zfsd_args_nofuse.c  zfsd_args_shared.c  zfsd_args_shared.h  zfsd_state.c  zfsd_state.h
zlomekfs/: AUTHORS  Doxyfile  INSTALL  Makefile.am  README  make-rpm.sh  zlomekfs.spec
zlomekfs/module/: constant.h  data-coding.h  dir.c  memory.h  zfs-prot.c  zfs-prot.def
zlomekfs/proxy/: memory.c  varray.c
zlomekfs/tests/: Makefile.am
zlomekfs/zfsd/: Makefile.am  cap.c  cap.h  data-coding.c  data-coding.h  dbus-provider.c  dbus-service-descriptors.h  dir.c  dump-metadata.c  fh.c  fh.h  file.c  hardlink-list.c  hashfile.c  hashfile.h  hashtab.c  interval.c  interval.h  journal.c  kernel.c  kernel.h  log.c  log.h  metadata.c  node.h  pthread-wrapper.c  random.c  semaphore.c  test.py  update.c  update.h  util.c  varray.h  volume.c  volume.h
zlomekfs/zfsd-status-py/: Makefile  generate_swig_def.sh  zfsd_status.c
(+2333 files in other folders)
