AC_INIT(configure.in)
AC_CONFIG_MACRO_DIR([m4])

AC_CONFIG_AUX_DIR([.])
AC_OUTPUT


AC_LANG_C
AC_PROG_CC
AC_DISABLE_SHARED
AC_PROG_LIBTOOL
AC_PROG_SED

AC_CHECK_HEADERS(pthread.h)
AC_CHECK_LIB(syplog, do_log)
AC_CHECK_LIB(dbus, dbus_connection_read_write)

AC_CHECK_HEADERS([linux/dirent.h])

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(zlomekfs, 0.0)


AC_OUTPUT( \
	Makefile \
	zfsd/Makefile \
	tests/Makefile \
	tests/nose-tests/Makefile \
	)

