AC_INIT(configure.in)

AC_OUTPUT


AC_LANG_C
AC_PROG_CC
AC_ENABLE_STATIC
AC_ENABLE_SHARED
AC_PROG_LIBTOOL
AM_PROG_CC_C_O

AC_CHECK_HEADERS(pthread.h)
AC_CHECK_LIB(zenunit, get_test_functions)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(syplog, 0.3)


AC_OUTPUT( \
	Makefile \
	src/Makefile \
	tests/Makefile
	)

